--- a/src/views/index.html
+++ b/src/views/index.html
@@ -135,7 +135,7 @@
                         <h2>Todos los tipos</h2>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=monumentos">
+                        <a href="./tag/monumentos">
                             <img src="https://acolmenero.site/photowhere/src/img/types/monumento.jpg" alt="monumentos">
                             <div>
                                 <p> Monumentos </p>
@@ -143,7 +143,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=naturaleza">
+                        <a href="./tag/naturaleza">
                             <img src="https://acolmenero.site/photowhere/src/img/types/naturaleza.jpg" alt="naturaleza">
                             <div>
                                 <p> Naturaleza </p>
@@ -151,7 +151,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=playa">
+                        <a href="./tag/playa">
                             <img src="https://acolmenero.site/photowhere/src/img/types/playa.jpg" alt="playa">
                             <div>
                                 <p> Playa </p>
@@ -159,7 +159,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=color">
+                        <a href="./tag/color">
                             <img src="https://acolmenero.site/photowhere/src/img/types/color_cudillero_2.jpg" alt="color">
                             <div>
                                 <p> Color </p>
@@ -167,7 +167,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=castillo">
+                        <a href="./tag/castillo">
                             <img src="https://acolmenero.site/photowhere/src/img/types/castillo_murallaAvila.jpg" alt="castillo">
                             <div>
                                 <p> Castillos </p>
@@ -175,7 +175,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=molinos">
+                        <a href="./tag/molinos">
                             <img src="https://acolmenero.site/photowhere/src/img/types/molinosConsuegra.jpg" alt="molinos">
                             <div>
                                 <p> Molinos </p>
@@ -183,7 +183,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=faro">
+                        <a href="./tag/faro">
                             <img src="https://acolmenero.site/photowhere/src/img/types/faroTrafalgar.jpg" alt="faro">
                             <div>
                                 <p> Faros </p>
@@ -191,7 +191,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=cascada">
+                        <a href="./tag/cascada">
                             <img src="https://acolmenero.site/photowhere/src/img/types/cascada_presasPadrillo_0.jpg" alt="cascada">
                             <div>
                                 <p> Cascadas </p>
@@ -199,7 +199,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=carretera">
+                        <a href="./tag/carretera">
                             <img src="https://acolmenero.site/photowhere/src/img/types/carretera_curvaCovadonga.jpg" alt="carretera">
                             <div>
                                 <p> Carretera </p>
@@ -207,7 +207,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=rural">
+                        <a href="./tag/rural">
                             <img src="https://acolmenero.site/photowhere/src/img/types/rural_roblerillodegata.jpg" alt="rural">
                             <div>
                                 <p> Rural </p>
@@ -215,7 +215,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=nolight">
+                        <a href="./tag/nolight">
                             <img src="https://acolmenero.site/photowhere/src/img/types/nolight.jpg" alt="nolight">
                             <div>
                                 <p> Sin Contaminación Luminica </p>
@@ -223,7 +223,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=puente">
+                        <a href="./tag/puente">
                             <img src="https://acolmenero.site/photowhere/src/img/types/puentes.jpg" alt="puente">
                             <div>
                                 <p> Puentes </p>
@@ -231,7 +231,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=urbano">
+                        <a href="./tag/urbano">
                             <img src="https://acolmenero.site/photowhere/src/img/types/urbano.jpg" alt="urbano">
                             <div>
                                 <p> Urbano </p>
@@ -239,7 +239,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=estatua">
+                        <a href="./tag/estatua">
                             <img src="https://acolmenero.site/photowhere/src/img/types/estatuas_plazaMayorMadrid_0.jpg" alt="estatua">
                             <div>
                                 <p> Estatuas </p>
@@ -247,7 +247,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=graffiti">
+                        <a href="./tag/graffiti">
                             <img src="https://acolmenero.site/photowhere/src/img/types/graffiti.jpg" alt="graffiti">
                             <div>
                                 <p> Graffiti </p>
@@ -255,7 +255,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=roca">
+                        <a href="./tag/roca">
                             <img src="https://acolmenero.site/photowhere/src/img/types/rocas.jpg" alt="roca">
                             <div>
                                 <p> Rocas </p>
@@ -263,7 +263,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=acantilado">
+                        <a href="./tag/acantilado">
                             <img src="https://acolmenero.site/photowhere/src/img/types/acantiladoInfiernu_2.webp" alt="acantilado">
                             <div>
                                 <p> Acantilados </p>
@@ -271,7 +271,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=pueblo">
+                        <a href="./tag/pueblo">
                             <img src="https://acolmenero.site/photowhere/src/img/types/pueblo_callejaFlores_0.jpg" alt="pueblo">
                             <div>
                                 <p> Pueblos </p>
@@ -279,7 +279,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=nieve">
+                        <a href="./tag/nieve">
                             <img src="https://acolmenero.site/photowhere/src/img/types/nieve_lagoCovadonga_01.jpg" alt="nieve">
                             <div>
                                 <p> Nevado </p>
@@ -287,7 +287,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=vanguardia">
+                        <a href="./tag/vanguardia">
                             <img src="https://acolmenero.site/photowhere/src/img/types/vanguardia.jpg" alt="vanguardia">
                             <div>
                                 <p> Vanguardia </p>
@@ -295,7 +295,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=jardin">
+                        <a href="./tag/jardin">
                             <img src="https://acolmenero.site/photowhere/src/img/types/jardin_valdemoro.jpg" alt="jardin">
                             <div>
                                 <p> Jardines </p>
@@ -303,7 +303,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=montaña">
+                        <a href="./tag/montaña">
                             <img src="https://acolmenero.site/photowhere/src/img/types/montaña.jpg" alt="montaña">
                             <div>
                                 <p> Montaña </p>
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=primavera">
+                        <a href="./tag/primavera">
                             <img src="https://acolmenero.site/photowhere/src/img/types/primavera_parqueQuinta_1.jpg" alt="primavera">
                             <div>
                                 <p> Primaveral </p>
@@ -325,7 +325,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=abandonado">
+                        <a href="./tag/abandonado">
                             <img src="https://acolmenero.site/photowhere/src/img/types/abandonado_sevilla_55.jpg" alt="abandonado">
                             <div>
                                 <p> Abandonado </p>
@@ -333,7 +333,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=basico">
+                        <a href="./tag/basico">
                             <img src="https://acolmenero.site/photowhere/src/img/types/basico_plazaBadajoz_1.jpg" alt="basico">
                             <div>
                                 <p> Básico </p>
@@ -341,7 +341,7 @@
                         </a>
                     </div>
                     <div class="spot_type">
-                        <a href="./tag?t=bar">
+                        <a href="./tag/bar">
                             <img src="https://acolmenero.site/photowhere/src/img/types/bar.jpg" alt="bar">
                             <div>
                                 <p> Bar </p>
@@ -369,23 +369,15 @@
     </div>
 
 
-    <!-- 
-    <script src="./src/js/embed.js?v=5"></script>
-    <script src="./src/js/Geo.js?v=5"></script>
-    <script src="./src/js/Place.js?v=5"></script>
-    <script src="./src/js/Filter.js?v=5"></script>
-    <script src="./src/js/near.js?v=5"></script>
-    <script src="./src/js/home.js?v=5"></script>
-    <script src="./src/js/load_photos.js?v=5"></script>
-    <script src="./src/js/photo_pre.js?v=5"></script> -->
-
     <script src="./src/js/ApiLocationsController.js"></script>
     <script src="./src/js/GeoController.js"></script>
     <script src="./src/js/LocationsController.js"></script>
     <script src="./src/js/PhotoController.js"></script>
+    <script src="./src/js/PopularPageController.js"></script>
+    <script src="./src/js/NearPageController.js"></script>
     <script src="./src/js/HomeController.js"></script>
-    <!-- <script src="cordova.js?v=5"></script> -->
-    <!-- <script src="./src/js/index.js?v=5"></script> -->
+    <script src="./src/js/endpoint.js"></script>
+
 
 </body>
 
