--- a/src/views/map.html
+++ b/src/views/map.html
@@ -23,13 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <!-- font-family: 'Montserrat', sans-serif; -->
 
-    <!-- <link rel="stylesheet" href="./src/css/common.css?v=5">
-    <link rel="stylesheet" href="./src/css/maps.css?v=5">
-    <link rel="stylesheet" href="./src/css/forms.css?v=5">
-    <link rel="stylesheet" href="./src/css/photo.css?v=5">
-    <link rel="stylesheet" href="./src/css/place.css?v=5">
-    <link rel="stylesheet" href="./src/css/filters.css?v=5">
-    <link rel="stylesheet" href="./src/css/loading.css?v=5"> -->
+
     <link rel="stylesheet" href="./src/css/common.css">
     <link rel="stylesheet" href="./src/css/locationpanel.css">
     <link rel="stylesheet" href="./src/css/loading.css">
@@ -176,6 +170,7 @@
     <script src="./src/js/LocationsController.js"></script>
     <script src="./src/js/PhotoController.js"></script>
     <script src="./src/js/MapController.js"></script>
+    <script src="./src/js/endpoint.js"></script>
 
 </body>
 
