--- a/src/css/common.css
+++ b/src/css/common.css
@@ -41,11 +41,14 @@ h2 {
 
 #mobile {
     background: #141212;
+    padding-bottom: 4rem !important;
+    min-height: 80vh;
 }
 
-main {
+
+/* main {
     padding-bottom: 4rem !important;
-}
+} */
 
 textarea {
     resize: vertical;
@@ -57,6 +60,15 @@ textarea {
     margin: .5rem .4rem !important;
     display: block;
     text-align: right;
+}
+
+.none {
+    margin-top: 2rem;
+    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 h2,
@@ -83,7 +95,7 @@ nav {
     background-color: whitesmoke;
     width: 100%;
     height: 3rem;
-    z-index: 3002;
+    z-index: 3010;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -97,7 +109,7 @@ footer {
     display: flex;
     width: 100%;
     height: 3rem;
-    z-index: 3002;
+    z-index: 3004;
     box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.212);
 }
 
