--- a/src/views/edit-profile.html
+++ b/src/views/edit-profile.html
@@ -9,24 +9,11 @@
     <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
-    <link rel="stylesheet" href="./src/css/common.css?v=5">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/common.css">
+    <link rel="stylesheet" href="./src/css/settings.css">
 
-    <style>
-        main {
-            padding: 1rem;
-            box-sizing: border-box;
-        }
-        
-        h2 {
-            color: whitesmoke;
-        }
-        
-        p {
-            color: whitesmoke;
-            text-align: justify;
-        }
-    </style>
+
 
 </head>
 
@@ -42,23 +29,23 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
                 quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
         </main>
+        <footer>
+            <a href="./">
+                <img src="./src/img/search.svg" alt="Home footer button">
+            </a>
+            <a href="./map">
+                <img src="./src/img/map.svg" alt="Map footer button">
+            </a>
+            <a href="./contribute">
+                <img src="./src/img/add.svg" alt="Contribute footer button">
+            </a>
+            <a href="./profile">
+                <img src="./src/img/user.svg" alt="Profile footer button">
+            </a>
+        </footer>
     </div>
 
 
-    <footer>
-        <a href="./">
-            <img src="./src/img/search.svg" alt="Home footer button">
-        </a>
-        <a href="./map">
-            <img src="./src/img/map.svg" alt="Map footer button">
-        </a>
-        <a href="./contribute">
-            <img src="./src/img/add.svg" alt="Contribute footer button">
-        </a>
-        <a href="./profile">
-            <img src="./src/img/user.svg" alt="Profile footer button">
-        </a>
-    </footer>
 
 </body>
 
