--- a/src/views/login.html
+++ b/src/views/login.html
@@ -9,31 +9,13 @@
     <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
-    <link rel="stylesheet" href="./src/css/common.css?v=5">
-    <link rel="stylesheet" href="./src/css/forms.css?v=5">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
-    <style>
-        main {
-            padding: 0 1rem;
-        }
-        
-        h2 {
-            color: whitesmoke;
-        }
-        
-        .prefer {
-            color: rgb(126, 126, 126);
-            /* text-decoration: 0; */
-            margin-right: 1rem;
-        }
-        
-        #error {
-            color: rgb(255, 108, 108);
-        }
-    </style>
+    <link rel="stylesheet" href="./src/css/common.css">
+    <link rel="stylesheet" href="./src/css/forms.css">
+
 
 </head>
 
@@ -46,80 +28,37 @@
     <div id="mobile">
         <main>
 
-            <fieldset>
-                <legend>
-                    <h2>Log In</h2>
-                </legend>
-                <form method="POST">
-                    <input type="text" name="username" placeholder="username" id="username">
-                    <input type="password" name="password" placeholder="password" id="password">
-                    <label id="error"></label>
-                    <a href="./register.html" class="prefer">
-                        <div class="button">
-                            <p>No tengo cuenta. Registrarme.</p>
-                        </div>
-                    </a>
-                    <button type="button" id="login_button">Log In</button>
-                </form>
-            </fieldset>
+            <h2>Log In</h2>
+
+            <form method="POST">
+                <input type="text" name="username" placeholder="username" id="username">
+                <input type="password" name="password" placeholder="password" id="password">
+                <label class="error"></label>
+                <a href="./signup" class="prefer">
+                    <p>No tengo cuenta. Registrarme.</p>
+                </a>
+                <button type="button" id="login_button">Log In</button>
+            </form>
 
         </main>
+        <footer>
+            <a href="./">
+                <img src="./src/img/search.svg" alt="Home footer button">
+            </a>
+            <a href="./map">
+                <img src="./src/img/map.svg" alt="Map footer button">
+            </a>
+            <a href="./contribute">
+                <img src="./src/img/add.svg" alt="Contribute footer button">
+            </a>
+            <a href="./profile">
+                <img src="./src/img/user.svg" alt="Profile footer button">
+            </a>
+        </footer>
     </div>
 
-    <footer>
-        <a href="./">
-            <img src="./src/img/search.svg" alt="Home footer button">
-        </a>
-        <a href="./map">
-            <img src="./src/img/map.svg" alt="Map footer button">
-        </a>
-        <a href="./contribute">
-            <img src="./src/img/add.svg" alt="Contribute footer button">
-        </a>
-        <a href="./profile">
-            <img src="./src/img/user.svg" alt="Profile footer button">
-        </a>
-    </footer>
 
-    <script>
-        var login_button = $("#login_button");
-        var username = $("#username");
-        var password = $("#password");
-        var error = $("#error");
-
-        login_button.click(function() {
-
-            var user = username.val().replaceAll("'", "").replaceAll('"', "");
-            username.val(user);
-            var pass = password.val().replaceAll("'", "").replaceAll('"', "");
-            password.val(pass);
-
-            if (user.length >= 6 && pass.length >= 6) {
-                login_button.text("Logging in");
-                $.ajax({
-                    type: "POST",
-                    // url: "https://acolmenero.site/photowhere/php/login.php",
-                    url: "./src/php/login.php",
-                    data: {
-                        "username": user,
-                        "password": pass
-                    },
-                    success: function(res) {
-
-                        if (res == "-Username and passwords do not match.") {
-                            error.text("Usuario y contraseña no coinciden");
-                            login_button.text("Log in");
-                        } else {
-                            localStorage.setItem("userID", res.split("'")[0]);
-                            localStorage.setItem("username", res.split("'")[1]);
-                            window.location = "./profile.html";
-                        }
-
-                    }
-                });
-            }
-        })
-    </script>
+    <script src="./src/js/LoginController.js"></script>
 
 </body>
 
