--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -8,31 +8,14 @@
 
     <title>Register</title>
 
-    <link rel="stylesheet" href="./src/css/common.css?v=5">
-    <link rel="stylesheet" href="./src/css/forms.css?v=5">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
-    <style>
-        main {
-            padding: 0 1rem;
-        }
-        
-        h2 {
-            color: whitesmoke;
-        }
-        
-        .prefer {
-            color: rgb(126, 126, 126);
-            /* text-decoration: 0; */
-            margin-right: 1rem;
-        }
-        
-        #error {
-            color: rgb(255, 120, 120);
-        }
-    </style>
+
+    <link rel="stylesheet" href="./src/css/common.css">
+    <link rel="stylesheet" href="./src/css/forms.css">
+
 
 </head>
 
@@ -42,107 +25,41 @@
         <h1>PHOTOWHERE</h1>
     </nav>
 
-    <main>
-
-        <fieldset>
-            <legend>
-                <h2>Register</h2>
-            </legend>
+    <div id="mobile">
+        <main>
+            <h2>Create an account</h2>
             <form action="./php/register.html" method="POST">
                 <input type="text" name="username" placeholder="Username" id="username">
                 <input type="text" name="password" placeholder="Password" id="password">
                 <input type="text" name="password1" placeholder="Repeat password" id="password1">
                 <label id="error"></label>
 
-                <a href="./login.html" class="prefer">
+                <a href="./login" class="prefer">
                     <p>Log In</p>
                 </a>
                 <button type="button" id="register_button">Register</button>
             </form>
-        </fieldset>
-    </main>
-
-    <footer>
-        <a href="./">
-            <img src="./src/img/search.svg" alt="Home footer button">
-        </a>
-        <a href="./map">
-            <img src="./src/img/map.svg" alt="Map footer button">
-        </a>
-        <a href="./contribute">
-            <img src="./src/img/add.svg" alt="Contribute footer button">
-        </a>
-        <a href="./profile">
-            <img src="./src/img/user.svg" alt="Profile footer button">
-        </a>
-    </footer>
-
-    <script>
-        var register_button = $("#register_button");
-        var username = $("#username");
-        var password = $("#password");
-        var password1 = $("#password1");
-        var error = $("#error");
 
 
-        register_button.click(function() {
+        </main>
 
-            var user = username.val().replaceAll("'", "").replaceAll('"', "");
-            username.val(user);
-            var pass = password.val();
-            // password.val(pass);
-            var pass1 = password1.val();
-            // password1.val(pass1);
+        <footer>
+            <a href="./">
+                <img src="./src/img/search.svg" alt="Home footer button">
+            </a>
+            <a href="./map">
+                <img src="./src/img/map.svg" alt="Map footer button">
+            </a>
+            <a href="./contribute">
+                <img src="./src/img/add.svg" alt="Contribute footer button">
+            </a>
+            <a href="./profile">
+                <img src="./src/img/user.svg" alt="Profile footer button">
+            </a>
+        </footer>
+    </div>
 
-            if (user.length >= 6 && pass.length >= 6 && user.length < 46 && pass.length < 46) {
-                if (/^([a-zA-Z0-9\-\_\?\¿\¡\!\.\(\)\<\>\=\;\:]+)$/.test(user)) {
-                    if (/^([a-zA-Z0-9\-\_\?\¿\¡\!\.\(\)\<\>\=\;\:]+)$/.test(pass)) {
-                        if (pass == pass1) {
-
-                            error.text("");
-                            register_button.text("Registrando...")
-
-                            $.ajax({
-                                type: "POST",
-                                // url: "https://acolmenero.site/photowhere/php/register.php",
-                                url: "./src/php/register.php",
-                                data: {
-                                    "username": user,
-                                    "password": pass
-                                },
-                                success: function(res) {
-
-                                    if (res.indexOf("taken") != -1) {
-                                        error.text("El usuario ya existeee");
-                                        register_button.text("Register")
-                                    } else if (res.indexOf("Error") != -1) {
-                                        error.text("Error en la base de datos: " + res);
-                                        register_button.text("Register")
-                                    } else {
-                                        localStorage.setItem("userID", res.split("'")[0]);
-                                        localStorage.setItem("username", res.split("'")[1]);
-                                        window.location = "./profile.html";
-                                    }
-
-                                }
-                            });
-                        } else {
-                            error.text("Contraseñas no coinciden");
-                        }
-                    } else {
-                        error.text("Contraseña con carácteres inválidos");
-                    }
-                } else {
-                    error.text("Nombre con carácteres inválidos");
-                }
-            } else {
-                error.text("Entre 6 y 45 carácteres");
-            }
-
-
-
-        })
-    </script>
+    <script src="./src/js/SignupController.js"></script>
 
 </body>
 
