--- a/src/views/tag.html
+++ b/src/views/tag.html
@@ -9,13 +9,7 @@
     <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
-    <link rel="stylesheet" href="./src/css/common.css?v=5">
-    <link rel="stylesheet" href="./src/css/types.css?v=5">
-    <link rel="stylesheet" href="./src/css/photo.css?v=5">
-    <link rel="stylesheet" href="./src/css/filters.css?v=5">
-    <link rel="stylesheet" href="./src/css/forms.css?v=5">
-    <link rel="stylesheet" href="./src/css/place.css?v=5">
-    <link rel="stylesheet" href="./src/css/loading.css?v=5">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
 
@@ -24,6 +18,13 @@
     <!-- font-family: 'Orelega One', cursive; -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <!-- font-family: 'Montserrat', sans-serif; -->
+
+    <link rel="stylesheet" href="/photowhere/src/css/common.css">
+    <link rel="stylesheet" href="/photowhere/src/css/locationpanel.css">
+    <link rel="stylesheet" href="/photowhere/src/css/loading.css">
+    <link rel="stylesheet" href="/photowhere/src/css/photodisplaypanel.css">
+    <link rel="stylesheet" href="/photowhere/src/css/photogrid.css">
+
 
 </head>
 
@@ -35,17 +36,17 @@
 
     <div id="photo-display-panel" style="display:none;">
         <div id="close-photo-display-panel" class="close-panel">
-            <img src="./src/img/cancel.svg" alt="cerrar ventana">
+            <img src="/photowhere/src/img/cancel.svg" alt="cerrar ventana">
         </div>
         <div id="photo-display-panel-container">
             <img src="" alt="previsualizar" id="photo-display-panel-img">
         </div>
         <div id="photo-display-panel-arrows">
             <div id="photo-display-panel-left-arrow" class="arrow">
-                <img src="./src/img/arrow.svg" alt="flecha izquierda">
+                <img src="/photowhere/src/img/arrow.svg" alt="flecha izquierda">
             </div>
             <div id="photo-display-panel-right-arrow" class="arrow">
-                <img src="./src/img/arrow.svg" alt="flecha derecha">
+                <img src="/photowhere/src/img/arrow.svg" alt="flecha derecha">
             </div>
         </div>
     </div>
@@ -100,19 +101,16 @@
 
     <div id="mobile">
         <main>
-            <!-- <div id="filters-btn">
-                <div class="noselect">Filtros</div>
-            </div> -->
 
             <div id="location-panel" class="hide-location-panel">
                 <div class="close-panel" id="close-location-panel">
-                    <img src="./src/img/cancel.svg" alt="cerrar ventana" id="close-location-panel">
+                    <img src="/photowhere/src/img/cancel.svg" alt="cerrar ventana" id="close-location-panel">
                 </div>
                 <div id="location-panel-data">
                     <div id="inject-data">
 
                         <div id="location_share">
-                            <img src="./src/img/share1.svg" alt="">
+                            <img src="/photowhere/src/img/share1.svg" alt="">
                         </div>
 
                         <h2 id="location_name">Lorem ipsum dolor.</h2>
@@ -138,36 +136,36 @@
                 </div>
             </div>
 
-            <div id="places" class="places_cont loading_zone">
-                <img src="./src/img/loading_w.gif" class="loading_gif" alt="Loading gif" style="margin: 15rem 0;">
+            <div id="tag-photogrid" class="places_cont photogrid loading_zone">
+                <img src="/photowhere/src/img/loading_w.gif" class="loading_gif" alt="Loading gif" style="margin: 15rem 0;">
             </div>
 
 
         </main>
+
+        <footer>
+            <a href="/photowhere/">
+                <img src="/photowhere/src/img/search.svg" alt="Home footer button">
+            </a>
+            <a href="../map">
+                <img src="/photowhere/src/img/map.svg" alt="Map footer button">
+            </a>
+            <a href="../contribute">
+                <img src="/photowhere/src/img/add.svg" alt="Contribute footer button">
+            </a>
+            <a href="../profile">
+                <img src="/photowhere/src/img/user.svg" alt="Profile footer button">
+            </a>
+        </footer>
     </div>
 
+    <script src="/photowhere/src/js/ApiLocationsController.js"></script>
+    <script src="/photowhere/src/js/GeoController.js"></script>
+    <script src="/photowhere/src/js/LocationsController.js"></script>
+    <script src="/photowhere/src/js/PhotoController.js"></script>
+    <script src="/photowhere/src/js/TagController.js"></script>
+    <script src="/photowhere/src/js/endpoint.js"></script>
 
-    <footer>
-        <a href="./">
-            <img src="./src/img/search.svg" alt="Home footer button">
-        </a>
-        <a href="./map">
-            <img src="./src/img/map.svg" alt="Map footer button">
-        </a>
-        <a href="./contribute">
-            <img src="./src/img/add.svg" alt="Contribute footer button">
-        </a>
-        <a href="./profile">
-            <img src="./src/img/user.svg" alt="Profile footer button">
-        </a>
-    </footer>
-
-    <script src="./src/js/places.js?v=5"></script>
-    <script src="./src/js/load_photos.js?v=5"></script>
-    <script src="./src/js/Place.js?v=5"></script>
-    <script src="./src/js/Filter.js?v=5"></script>
-    <script src="./src/js/photo_pre.js?v=5"></script>
-    <script src="./src/js/index.js?v=5"></script>
 
 </body>
 
