--- a/src/css/map.css
+++ b/src/css/map.css
@@ -6,15 +6,29 @@ body {
 #mobile {
     background-color: whitesmoke !important;
     width: 100%;
+    padding: 0 !important;
 }
 
 #map {
-    height: calc(100vh - 8rem);
+    height: calc(100vh - 6rem);
     width: 100%;
 }
 
 .gmnoprint,
 .gm-fullscreen-control {
+    display: none;
+}
+
+#loading_map {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(245, 245, 245, 0.3);
+    position: fixed;
+    top: 0;
+    z-index: 3003;
+}
+
+.loaded_map {
     display: none;
 }
 
@@ -24,6 +38,10 @@ body {
     width: 100%;
     padding: .5rem;
     box-sizing: border-box;
+}
+
+#location_map {
+    display: none;
 }
 
 @media (min-width: 576px) {
