--- a/src/views/map.html
+++ b/src/views/map.html
@@ -106,10 +106,14 @@
         </div>
     </div>
 
+    <div id="loading_map" class="loading_zone">
+        <img src="./src/img/loading_w.gif" class="loading_gif" alt="Loading gif">
+    </div>
+
     <div id="mobile">
 
         <main>
-            <div id="filters-btn" class="noselect"> Filtros </div>
+            <!-- <div id="filters-btn" class="noselect"> Filtros </div> -->
 
             <div id="map"></div>
 
@@ -121,14 +125,14 @@
                     <div id="inject-data">
 
                         <div id="location_share">
-                            <img src="./src/img/share1.svg" alt="">
+                            <img src="./src/img/share.svg" alt="">
                         </div>
 
                         <h2 id="location_name">Lorem ipsum dolor.</h2>
                         <h3 id="location_description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
 
                         <div>
-                            <a href="" id="location_socialmedia">
+                            <a href="" id="location_socialmedia" target="_blank">
                                 <img alt="icono de la red social">
                                 <p></p>
                             </a>
@@ -142,6 +146,7 @@
                         <p id="location_googlemaps">
                             <a href="#" target="_blank"> Ver en Google Maps </a>
                         </p>
+                        <button id="location_map"></button>
 
                     </div>
                 </div>
