--- a/src/css/common.css
+++ b/src/css/common.css
@@ -45,10 +45,41 @@ h2 {
     min-height: 80vh;
 }
 
+.text-center {
+    text-align: center;
+}
 
-/* main {
-    padding-bottom: 4rem !important;
-} */
+#location_map {
+    border: 0;
+    text-decoration: none;
+    padding: .5rem;
+    background-color: rgb(0, 89, 255);
+    color: white;
+    width: 50%;
+    display: block;
+    font-size: 1rem;
+    margin: 3rem auto 1rem auto;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+    transition: background-color .2s, transform .3s;
+    -webkit-transition: background-color .2s, transform .3s;
+    -moz-transition: background-color .2s, transform .3s;
+    -ms-transition: background-color .2s, transform .3s;
+    -o-transition: background-color .2s, transform .3s;
+}
+
+#location_map:hover {
+    background-color: rgb(8, 76, 202);
+    transform: translateY(-.3rem);
+    -webkit-transform: translateY(-.3rem);
+    -moz-transform: translateY(-.3rem);
+    -ms-transform: translateY(-.3rem);
+    -o-transform: translateY(-.3rem);
+}
 
 textarea {
     resize: vertical;
@@ -57,7 +88,7 @@ textarea {
 .error {
     color: red;
     font-size: .8rem !important;
-    margin: .5rem .4rem !important;
+    margin: 1rem .4rem .5rem .4rem !important;
     display: block;
     text-align: right;
 }
@@ -74,7 +105,7 @@ textarea {
 h2,
 h3,
 p,
-.tag a,
+a,
 strong,
 label,
 button {
