--- a/src/views/tag.html
+++ b/src/views/tag.html
@@ -110,14 +110,14 @@
                     <div id="inject-data">
 
                         <div id="location_share">
-                            <img src="/photowhere/src/img/share1.svg" alt="">
+                            <img src="/photowhere/src/img/share.svg" alt="">
                         </div>
 
                         <h2 id="location_name">Lorem ipsum dolor.</h2>
                         <h3 id="location_description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
 
                         <div>
-                            <a href="" id="location_socialmedia">
+                            <a href="" id="location_socialmedia" target="_blank">
                                 <img alt="icono de la red social">
                                 <p></p>
                             </a>
@@ -131,6 +131,9 @@
                         <p id="location_googlemaps">
                             <a href="#" target="_blank"> Ver en Google Maps </a>
                         </p>
+                        <div class="text-center">
+                            <a id="location_map">VER EN EL MAPA</a>
+                        </div>
 
                     </div>
                 </div>
