--- a/src/css/locationpanel.css
+++ b/src/css/locationpanel.css
@@ -13,7 +13,8 @@
 #location-panel h2,
 #location-panel h3,
 #location_address,
-#location_socialmedia p {
+#location_socialmedia p,
+#location_description a {
     color: black;
 }
 
@@ -21,6 +22,7 @@
     margin: 0;
     padding: 1rem 1rem .5rem 1rem;
     font-size: 1.2rem;
+    max-width: 80%;
 }
 
 #location-panel h3 {
@@ -36,7 +38,7 @@
     position: relative;
     max-height: 64vh;
     overflow-y: scroll;
-    padding-bottom: 3rem;
+    padding-bottom: 1rem;
     background-color: white;
 }
 
@@ -121,6 +123,38 @@
 
 .hide-location-panel {
     transform: translate(-50%, 100%) !important;
+}
+
+#location_map {
+    border: 0;
+    text-decoration: none;
+    padding: .5rem;
+    background-color: rgb(0, 89, 255);
+    color: white;
+    width: 50%;
+    display: block;
+    font-size: 1rem;
+    margin: 2rem auto 1rem auto;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+    transition: background-color .2s, transform .3s;
+    -webkit-transition: background-color .2s, transform .3s;
+    -moz-transition: background-color .2s, transform .3s;
+    -ms-transition: background-color .2s, transform .3s;
+    -o-transition: background-color .2s, transform .3s;
+}
+
+#location_map:hover {
+    background-color: rgb(8, 76, 202);
+    transform: translateY(-.3rem);
+    -webkit-transform: translateY(-.3rem);
+    -moz-transform: translateY(-.3rem);
+    -ms-transform: translateY(-.3rem);
+    -o-transform: translateY(-.3rem);
 }
 
 @media (min-width: 576px) {
