--- a/src/views/tag.html
+++ b/src/views/tag.html
@@ -50,17 +50,13 @@
             </div>
         </div>
     </div>
-    <!-- <div id="filters" style="display:none;">
-        <div>
-            <div class="close">
-                <img src="./src/img/cancel.svg" alt="cerrar ventana" id="close-filter">
-            </div>
-            <h2 class="noselect">Filtros</h2>
-            <form>
-                <input type="text" placeholder="Busca algo..." id="general-filter">
-                <input type="text" placeholder="Ciudad" id="city-filter">
-                <select name="type" id="types-filter">
-                    <option value="">Todos</option>
+
+
+    <div id="mobile">
+        <main>
+            <div>
+                <select name="type" id="tag_filter">
+                    <option value="">Elije una etiqueta</option>
                     <option value="acantilado">Acantilado</option>
                     <option value="agua">Agua</option>
                     <option value="abandonado">Abandonado</option>
@@ -94,14 +90,7 @@
                     <option value="vistas">Vistas</option>
                     <option value="vanguardia">Vanguardia</option>
                 </select>
-                <button id="btn-filter" type="button">Buscar</button>
-            </form>
-        </div>
-    </div> -->
-
-    <div id="mobile">
-        <main>
-
+            </div>
             <div id="location-panel" class="hide-location-panel">
                 <div class="close-panel" id="close-location-panel">
                     <img src="/photowhere/src/img/cancel.svg" alt="cerrar ventana" id="close-location-panel">
