--- a/src/views/404.html
+++ b/src/views/404.html
@@ -6,11 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <link rel="stylesheet" href="./src/css/common.css">
+    <style>
+        /* html,
+        body {
+            background-color: black !important;
+        } */
+        
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 90vh;
+            text-align: center;
+            /* background-color: #181818; */
+        }
+        
+        h1 {
+            color: whitesmoke;
+        }
+        
+        img {
+            width: 128px;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h1>404 Not Found</h1>
+    <main>
+        <h1>404 Not Found</h1>
+        <img class="loading_gif" src="./src/img/loading_w.gif" />
+    </main>
 
 </body>
 
